<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_mileage">增加里程</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">能量中心</string>
    <string name="appointment_time_label">预约时间:</string>
    <string name="battery_over_heat">电池过温，远离车辆，请联系维修</string>
    <string name="best_limit_format">最佳%d%%</string>
    <string name="bottom_bar_type_and_time_format">%1$s%2$s</string>
    <string name="can_not_discharge_normal">未能正常供电</string>
    <string name="cancel">取消</string>
    <string name="change_charge_limit">调整限值</string>
    <string name="charge_appointment_label">慢充预约充电</string>
    <string name="charge_appointment_set_time_dialog_title">设置开始充电时间</string>
    <string name="charge_complete_increased_mileage_format">增加里程：</string>
    <string name="charge_complete_total_time">充电时间</string>
    <string name="charge_error">充电故障</string>
    <string name="charge_going2finish">充电即将完成</string>
    <string name="charge_gun_action_error_advise">当前车辆不支持供电功能，请拔出供电枪</string>
    <string name="charge_gun_action_error_title">不支持供电功能</string>
    <string name="charge_gun_error">同时插入了两个充电枪</string>
    <string name="charge_gun_error2">直流枪与交流枪同时插入，无法充电，请检查后重试</string>
    <string name="charge_gun_has_unlock">充电枪已解锁</string>
    <string name="charge_limit">充电限值</string>
    <string name="charge_limit_current_label">当前限值：</string>
    <string name="charge_limit_protect_tips">电池健康保护：当限值非90%时，上电后将恢复到90%（插充电枪时除外）</string>
    <string name="charge_limit_protect_tips_lfp">电池健康保护：当限值低于100%时，上电后将恢复到100%（插充电枪时除外）</string>
    <string name="charge_limit_set_to_best">最佳</string>
    <string name="charge_limit_tips_best">已调整至最佳限值</string>
    <string name="charge_limit_tips_best_lfp">已处于该车型的最佳充电限值</string>
    <string name="charge_limit_tips_regular_lfp">允许在 50% - 100% 之间设置充电限值</string>
    <string name="charge_limit_tips_reset">上电后将恢复到最佳</string>
    <string name="charge_limit_tips_travel">该车辆的最高充电限值只支持调节至最佳限值90%</string>
    <string name="charge_lock_gun">重新锁枪</string>
    <string name="charge_period">充电时段</string>
    <string name="charge_port_ac_fault_prompt">慢充口故障，请及时检修</string>
    <string name="charge_port_dc_fault_prompt">快充口故障，请及时检修</string>
    <string name="charge_port_loading">充电口运行中，暂不能操作哦</string>
    <string name="charge_port_unable_with_running">车辆运行中，不能打开充电口</string>
    <string name="charge_prepare_cooling">冷却中...</string>
    <string name="charge_prepare_cooling_finish_quickly">冷却即将完成</string>
    <string name="charge_prepare_heat_management_takes_long_time">需较长时间</string>
    <string name="charge_prepare_hour_format">%d 小时</string>
    <string name="charge_prepare_min_format">%d 分钟</string>
    <string name="charge_prepare_remaining">剩余 </string>
    <string name="charge_prepare_tips1">若长时间无响应，请重新插拔充电枪</string>
    <string name="charge_prepare_tips2">充电准备…</string>
    <string name="charge_prepare_tips3">充电准备完成</string>
    <string name="charge_prepare_tips4">等待充电桩响应</string>
    <string name="charge_prepare_tips5">长时间无响应请重新插拔充电枪</string>
    <string name="charge_prepare_tips6">请重新插拔充电枪</string>
    <string name="charge_prepare_warming">加热中... </string>
    <string name="charge_prepare_warming_finish_quickly">加热即将完成</string>
    <string name="charge_start_time">充电开始时间</string>
    <string name="charge_station_error_tips2">充电桩故障，有一定风险损坏车辆，请检查后重试</string>
    <string name="charge_station_error_title">充电桩充电故障</string>
    <string name="charge_total_time">充电时长</string>
    <string name="charge_unlock_gun">解锁充电枪</string>
    <string name="charging_solwed_tips">当前充电较慢，请检查充电设备是否正常</string>
    <string name="chart_charge">充电曲线</string>
    <string name="chart_consumption">能耗曲线</string>
    <string name="chart_consumption_average_format">%skWh/100km</string>
    <string name="chart_consumption_average_label">自启动后平均能耗</string>
    <string name="chart_consumption_level_best">最佳</string>
    <string name="chart_consumption_level_format">能耗等级：%s</string>
    <string name="chart_consumption_level_standard">标准</string>
    <string name="chart_consumption_local_average_label_format">%s平均能耗：</string>
    <string name="chart_current_format">电流：%sA</string>
    <string name="chart_discharging">供电曲线</string>
    <string name="chart_label_consumption">能耗（kWh/100km）</string>
    <string name="chart_label_mileage">里程（km）</string>
    <string name="chart_label_power">功率（kW）</string>
    <string name="chart_label_soc">电量（%）</string>
    <string name="chart_volt_format">电压：%sV</string>
    <string name="close">关闭</string>
    <string name="confirm">确认</string>
    <string name="current">电流: </string>
    <string name="current_elec_too_small_tips">在当前电量小于或等于 20% 时，无法供电。</string>
    <string name="current_unit">A</string>
    <string name="dialog_content_tip_finish_charging">再次充电，需要重新插充电枪</string>
    <string name="dialog_message_confirm_decrease_stop_charge">正在充电时，当设置的充电限值小于或等于当前电量时，会结束充电。</string>
    <string name="dialog_title_confirm_stop_charge">是否结束充电？</string>
    <string name="dialog_trunk_power_fridge_tips">随车辆锁车下电，冰箱电源自动断电</string>
    <string name="dialog_trunk_power_fridge_tips_for_delay">车辆锁车下电后，后备箱12V电源延迟断电</string>
    <string name="dialog_trunk_power_fridge_title">冰箱电源断电时间设置</string>
    <string name="dialog_trunk_power_option_fridge_tips">车辆锁车下电后，冰箱电源将延时断电，且会增加电量消耗</string>
    <string name="dialog_trunk_power_option_tips">车辆锁车下电后，后备箱12V电源将延时断电。\n请注意，这将增加电量的消耗。</string>
    <string name="dialog_trunk_power_tips">随车辆锁车下电，后备箱12V电源自动断电</string>
    <string name="dialog_trunk_power_tips_for_delay">车辆锁车下电后，冰箱电源延迟断电</string>
    <string name="dialog_trunk_power_title">后备箱12V电源断电时间设置</string>
    <string name="discharge_error_title">无法供电</string>
    <string name="discharge_limit">供电限值</string>
    <string name="discharge_not_allow_larger_than_current_soc">不能超出当前电量</string>
    <string name="discharge_prepare_tips1">正在连接供电枪</string>
    <string name="discharge_supply_format">对外供电量：%skWh</string>
    <string name="dynamic_state_can_not_release_gun_detail">无法拔枪？请尝试解锁充电枪</string>
    <string name="electri_beyond_charge_limit">当前充电限值低于电量，无法启动充电，请先调整充电限值</string>
    <string name="electri_beyond_charge_limit_title">无法充电</string>
    <string name="error_tips2">非车辆故障，请重新操作充电或更换充电桩。车辆故障则联系维修。</string>
    <string name="everyday">每天</string>
    <string name="finish_charge">结束充电</string>
    <string name="finish_discharge2">停止供电</string>
    <string name="fridge_fault">冰箱有异常&gt;</string>
    <string name="fridge_label">车载冰箱</string>
    <string name="fridge_power_disable">已关闭</string>
    <string name="fridge_power_enable">已开启</string>
    <string name="fridge_settings">冰箱设置</string>
    <string name="help_content_battery_temp_control">•开启功能后，系统会识别导航目的地为快充站时提前进行电池加热或冷却，将电池温度控制在最佳充电温度，缩短快充的时间。 \n• 开启该功能的前提条件包括导航目的地为快充站，当前电池的温度不在最佳的充电区间，当前的剩余里程足够达到目的地等。 \n• 开启该功能后会对电池进行加热或冷却，会消耗一部分电量。</string>
    <string name="help_content_battery_warming_description">低温电池预热功能可以在寒冷的天气下，用充电桩的电给电池包加热，当电池加热到合适的温度时，将能有效的提高车辆在寒冷情况下的续航。</string>
    <string name="help_content_battery_warming_note_content">• 该功能开启时需要连接慢充桩，同时保证慢充桩处于正常工作状况。 \n• 如果同时使用了慢充预约充电，请确保在设置电池预热时间时，需晚于慢充预约充电的时间，以便当时可以用充电桩的电量。 \n• 如果电池温度较高或正在充电中，则不需要使用该功能。</string>
    <string name="help_content_battery_warming_note_title">功能使用注意事项：</string>
    <string name="help_content_mileage_description_cltc">中国轻型车行驶工况，平均车速28.96km/h，最高车速114km/h，是能够更加真实的反映出具有中国特色的工况。</string>
    <string name="help_content_mileage_description_nedc">新欧洲汽车法规循环工况，平均车速33公里/小时，最高车速120公里/小时，工况较温和。</string>
    <string name="help_content_mileage_description_wltp">世界轻型车辆测试程序，平均车速47公里/小时，最高车速131公里/小时，工况与实际驾驶更接近。</string>
    <string name="help_content_mileage_title_cltc">CLTC：</string>
    <string name="help_content_mileage_title_nedc">NEDC：</string>
    <string name="help_content_mileage_title_wltp">WLTP：</string>
    <string name="help_content_usage_for_low_temp">• 在低温环境下，动力电池包功率受限，会影响车辆的动力性能；当车辆行驶时，动力电池包会逐渐升温至正常水平，车辆动力也会恢复正常。 \n• 在低温环境下，正常充电前可能会需要先加热电池，此过程需要耗时若干分钟。 \n• 在低温环境下，车辆不使用时，应尽量保持充电枪连接，避免因电池温度过低导致车辆无法启动。 \n• 在低温环境下，续航会因为电池活性降低而减少，此为正常现象，随着车辆行驶，续航会有所恢复。</string>
    <string name="help_content_usage_for_normal">• 为保证充电速度和延长电池寿命，建议在充电时，选择“最佳充电”限值。 \n• 为避免电池电量过低，不允许设置低于 20% 的放电限值。 \n• 为避免永久损失电池部分续航，应避免将电池电量耗尽（0%）。 \n• 为避免动力电池包永久损坏，禁止将车辆放在 60° C 以上的环境温度中。 \n• 为避免动力电池包永久损坏，禁止将车辆放在 -30° C 以下的环境温度中。 \n• 为避免车辆无法正常启动，请不要在电池电量低于 20% 时，将车辆放在 -20℃ 至 -30℃ 的环境温度中冻透。 \n• 充电时，当电池温度过低或过高时，会先对电池进行加热或冷却，以使电池温度处于最佳充电区间，从而使充电速度达到最佳。电池加热或冷却所需的电量来自充电桩，不会额外消耗电池电量。</string>
    <string name="help_tab_battery_temp_control">快充前电池温度控制</string>
    <string name="help_tab_mileage_mode">续航标准说明</string>
    <string name="help_tab_usage_low_temp">低温使用指南</string>
    <string name="help_tab_usage_normal">日常使用建议</string>
    <string name="help_title">充电帮助</string>
    <string name="hour">小时</string>
    <string name="hour_and_min_format">%d小时%d分钟</string>
    <string name="keep_temp_start">立即预热</string>
    <string name="limit_charge_view_daily">日常</string>
    <string name="limit_charge_view_fifty_percent">50%</string>
    <string name="limit_charge_view_long_dis">长途</string>
    <string name="limit_charge_view_ninty_best_percent">90%最佳</string>
    <string name="low_temperature_battery_preheating">低温电池预热</string>
    <string name="minute">分钟</string>
    <string name="power">功率: </string>
    <string name="power_unit">kw</string>
    <string name="rest_time_calculating">剩余时间计算中</string>
    <string name="title_charging">充电中</string>
    <string name="trunk_power_config_label">断电时间:</string>
    <string name="trunk_power_enable">供电中</string>
    <string name="trunk_power_label">后备箱12V电源</string>
    <string name="volt">电压: </string>
    <string name="volt_unit">V</string>
    <string name="vui_battery_protect_mode">电池健康保护</string>
    <string name="vui_fridge_switch">车载冰箱电源|冰箱电源</string>
    <string name="vui_fridge_time">冰箱电源关闭时间|车载冰箱关闭时间|断电时间</string>
    <string name="vui_keep_temp_appoint">低温电池预热的预约</string>
    <string name="vui_keep_temp_start">立即预热|开启低温电池预热</string>
    <string name="vui_keep_temp_time">低温电池预热的时间|预热的预约时间|预热时间</string>
    <string name="vui_trunk_power_switch">后备箱电源|尾箱电源</string>
    <string name="vui_trunk_power_time">尾箱电源关闭时间|后备箱电源关闭时间</string>
</resources>