<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.xiaopeng.xui.widget.XSwitch android:enabled="false" android:id="@+id/keep_temp_appointment_toggle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:layout_marginStart="38dp" app:layout_constraintBottom_toBottomOf="@+id/keep_temp_appointment_time_container" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/keep_temp_appointment_time_container" app:vuiEnableViewVuiMode="true" app:vuiLabel="@string/vui_keep_temp_appoint"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="28sp" android:id="@+id/keep_temp_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/low_temperature_battery_preheating" android:paddingStart="33dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toEndOf="@+id/keep_temp_appointment_toggle" app:layout_constraintTop_toTopOf="@+id/keep_temp_appointment_toggle" style="@style/Text.Title.Bottom"/>
    <com.xiaopeng.xui.widget.XLinearLayout android:id="@+id/keep_temp_appointment_time_container" android:layout_marginStart="@dimen/keep_temp_container_mar_str" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toEndOf="@+id/keep_temp_label" app:layout_constraintTop_toTopOf="0" app:vuiElementType="BUTTON" app:vuiEnableViewVuiMode="true" app:vuiLabel="@string/vui_keep_temp_time" style="@style/ConfigContainer">
        <com.xiaopeng.xui.widget.XTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/appointment_time_label" android:layout_marginEnd="8dp" style="@style/ConfigLabel"/>
        <com.xiaopeng.xui.widget.XTextView android:id="@+id/keep_temp_appointment_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="00:00" android:layout_weight="1" style="@style/ConfigContent"/>
    </com.xiaopeng.xui.widget.XLinearLayout>
    <com.xiaopeng.xui.view.XView android:id="@+id/divider" android:background="@color/bottom_bar_divider" android:layout_width="1dp" android:layout_height="40dp" android:layout_marginLeft="21dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintHorizontal_bias="0.06" app:layout_constraintStart_toEndOf="@+id/keep_temp_appointment_time_container" app:layout_constraintTop_toTopOf="0"/>
    <com.xiaopeng.xui.widget.XButton android:textSize="28sp" android:id="@+id/keep_temp" android:layout_marginLeft="21dp" android:text="@string/keep_temp_start" app:layout_constraintStart_toEndOf="@+id/divider" app:vuiEnableViewVuiMode="true" app:vuiLabel="@string/vui_keep_temp_start" style="@style/BottomExtraButton"/>
</merge>
