<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/layout_car_reference"/>
    <com.xiaopeng.chargecontrol.widget.ThemeTextView android:textColor="@color/charging" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_charging" android:drawableStart="@drawable/ic_charging" app:layout_constraintBottom_toTopOf="@+id/car_reference" app:layout_constraintEnd_toStartOf="@+id/message_container" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="0" style="@style/Text.Title"/>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/message_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="30dp" app:layout_constraintBottom_toBottomOf="@+id/title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/title" app:layout_constraintTop_toTopOf="@+id/title">
        <com.xiaopeng.xui.widget.XImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_remaining_time" android:layout_marginEnd="6dp"/>
        <com.xiaopeng.xui.widget.XTextView android:id="@+id/message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rest_time_calculating" style="@style/Text.Title"/>
        <LinearLayout android:orientation="horizontal" android:id="@+id/time_container" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <com.xiaopeng.xui.widget.XTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/charge_prepare_remaining" style="@style/Text.Title"/>
            <com.xiaopeng.xui.widget.XTextView android:id="@+id/hour" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/Text.Title"/>
            <com.xiaopeng.xui.widget.XTextView android:id="@+id/unit_hour" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hour" style="@style/Text.Title"/>
            <com.xiaopeng.xui.widget.XTextView android:id="@+id/min" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" style="@style/Text.Title"/>
            <com.xiaopeng.xui.widget.XTextView android:id="@+id/unit_min" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/minute" style="@style/Text.Title"/>
        </LinearLayout>
    </LinearLayout>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/stop_charge" android:layout_marginTop="4dp" android:text="@string/finish_charge" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/car_reference" app:vuiEnableViewVuiMode="true" style="@style/XButton.Real.Mid.Positive"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="20sp" android:id="@+id/charging_solwed_tips" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/charging_solwed_tips" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/stop_charge" style="@style/Text.Message"/>
    <com.xiaopeng.xui.widget.XRelativeLayout android:id="@+id/lock_gun_tips_container" android:background="@drawable/bg_unlock" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="136dp" android:layout_marginTop="136dp" android:paddingStart="@dimen/lock_gun_padding" android:paddingEnd="@dimen/lock_gun_padding" android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0" app:vuiEnableViewVuiMode="true">
        <com.xiaopeng.xui.widget.XTextView android:textSize="24sp" android:textColor="@color/x_list_text_color_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25dp" android:text="@string/charge_gun_has_unlock" android:layout_centerHorizontal="true" style="@style/XListTextSub"/>
        <com.xiaopeng.xui.widget.XButton android:id="@+id/lock_gun" android:saveEnabled="false" android:layout_marginBottom="22dp" android:minWidth="@dimen/x_btn_ghost_small_width" android:text="@string/charge_lock_gun" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" app:vuiEnableViewVuiMode="true" style="@style/XButton.Ghost.Mid"/>
    </com.xiaopeng.xui.widget.XRelativeLayout>
</com.xiaopeng.xui.widget.XConstraintLayout>
