<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_body_04_size" android:textColor="@color/limit_tips_color" android:id="@+id/limit_min" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="44dp" android:text="@string/limit_charge_view_fifty_percent" app:layout_constraintEnd_toEndOf="@+id/limit_bg" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="@+id/limit_bg" app:layout_constraintTop_toBottomOf="@+id/tips"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_body_04_size" android:textColor="@color/limit_tips_color" android:id="@+id/limit_best" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/limit_charge_view_ninty_best_percent" app:layout_constraintBottom_toBottomOf="@+id/limit_min" app:layout_constraintEnd_toEndOf="@+id/limit_bg" app:layout_constraintHorizontal_bias="0.95" app:layout_constraintStart_toStartOf="@+id/limit_bg" app:layout_constraintTop_toTopOf="@+id/limit_min" app:vuiAction="Click" app:vuiElementType="CUSTOM" app:vuiEnableViewVuiMode="true" app:vuiLabel="@string/chart_consumption_level_best"/>
    <include layout="@layout/common_limit_settings"/>
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/limit_bottom_indicator" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18dp" android:src="@drawable/charge_limit_bottom_indicator_lnc" app:layout_constraintEnd_toEndOf="@+id/limit_bg" app:layout_constraintTop_toBottomOf="@+id/limit_bg"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_body_04_size" android:textColor="@color/limit_tips_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/limit_charge_view_daily" android:layout_marginEnd="147dp" app:layout_constraintEnd_toStartOf="@+id/limit_label_long_distance" app:layout_constraintTop_toTopOf="@+id/limit_label_long_distance"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_body_04_size" android:textColor="@color/limit_tips_color" android:id="@+id/limit_label_long_distance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3dp" android:text="@string/limit_charge_view_long_dis" android:layout_marginEnd="17dp" app:layout_constraintEnd_toEndOf="@+id/limit_bg" app:layout_constraintTop_toBottomOf="@+id/limit_bottom_indicator"/>
    <com.xiaopeng.chargecontrol.widget.ThemeCheckBox android:textSize="@dimen/x_font_body_03_size" android:textColor="@color/limit_tips_color" android:id="@+id/battery_protect_checkbox" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:layout_marginBottom="78dp" android:checked="true" android:text="@string/charge_limit_protect_tips" android:layout_marginStart="60dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="@+id/limit_bg" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/limit_label_long_distance" app:layout_constraintWidth_default="wrap" app:vuiEnableViewVuiMode="true" app:vuiLabel="@string/vui_battery_protect_mode" style="@style/Text.Message"/>
</com.xiaopeng.xui.widget.XConstraintLayout>
