<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.xiaopeng.xui.widget.XSwitch android:id="@+id/trunk_power_toggle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:layout_marginStart="38dp" app:layout_constraintBottom_toBottomOf="@+id/trunk_power_config_container" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/trunk_power_config_container" app:vuiEnableViewVuiMode="true" app:vuiLabel="@string/vui_trunk_power_switch"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="28sp" android:id="@+id/power_supply_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/trunk_power_label" android:layout_marginStart="33dp" app:layout_constraintBottom_toTopOf="@+id/trunk_power_state" app:layout_constraintStart_toEndOf="@+id/trunk_power_toggle" app:layout_constraintTop_toTopOf="@+id/trunk_power_config_container" app:layout_constraintVertical_chainStyle="packed" style="@style/Text.Title.Bottom"/>
    <com.xiaopeng.chargecontrol.widget.ThemeTextView android:textSize="22sp" android:textColor="@color/charging" android:gravity="center" android:id="@+id/trunk_power_state" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/trunk_power_enable" app:layout_constraintBottom_toBottomOf="@+id/trunk_power_config_container" app:layout_constraintStart_toStartOf="@+id/power_supply_label" app:layout_constraintTop_toBottomOf="@+id/power_supply_label"/>
    <com.xiaopeng.xui.widget.XLinearLayout android:id="@+id/trunk_power_config_container" app:layout_constraintEnd_toEndOf="0" app:vuiElementType="BUTTON" app:vuiEnableViewVuiMode="true" app:vuiLabel="@string/vui_trunk_power_time" style="@style/ConfigContainer">
        <com.xiaopeng.xui.widget.XTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/trunk_power_config_label" android:layout_marginEnd="4dp" style="@style/ConfigLabel"/>
        <com.xiaopeng.xui.widget.XTextView android:id="@+id/trunk_power_config" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" style="@style/ConfigContent"/>
    </com.xiaopeng.xui.widget.XLinearLayout>
</merge>
